16.nov. (lv)
      - more work on MusicXML <metronome>
15.nov. (la)
      - fix "can't add dot to rest outside note entry"
      - fix bar line cut crash
      - forbid dots on full measure rest and avoid crash
      - enhance break plugin
14.nov. (ws)
      - delete barline reverts type to normal
13.nov. (ws)
      - right click does not change existing selection
      - fixed again: Measure repeat sign always on top when dragged from palette
      - do not disable sequencer and synthesizer, if soundfont cannot be loaded
      - show warning dialog, when soundfile loading failed
      - save dirty state in session file
      - show dialog, when a session file is found
12.nov. (lv)
      - export of MusicXML <metronome>
9.nov. (lv)
      - fix import of MusicXML <sound tempo="...">
       (ws)
      - fix: drum palette crashes program on non-drum parts
      - autosave on is now the default in preferences
      - new autosave implementation: save into temporary files, not into
        original files. This also works for the buildin demo file and new
        created scores.
8.nov. (lv)
      - import of MusicXML <metronome>
       (ws)
      - fix position of articulation element for staff displaced notes
7.nov. (ws)
      - fix: tuplets in note entry mode
      - fix: grace notes don't transpose
      - layout: remove accidental, if two notes share the same note head
      (og)
	- exportly: lyrics. Works at least on demo adeste. several bugfixes.
6.nov. (ws)
      - cross beam layout fix
      - fix: D.S. ignored if inside a repeated section
      - fix crash when removing key signature when there is only one
      - fix layout of measure repeat
      - measure repeat symbol was not drawn in palette
      - note spacing function reimplemented; simpler and hopefully faster
        and more flexible
      (db)
      - fix file extensions in startup score dialog
      - minor grammar changes
5.nov. (ws)